# multi-level-co-surrogates

./: .coveragerc  .gitignore  CITATION.cff  LICENSE  README.md  __main__.py  bo.py  config.py  forrester2007.ipynb  main.py  mse-grid-linreg.py  requirements-dev.txt  requirements.txt  sampling_exploration.ipynb  setup.cfg  test_requirements.txt  trifidbo.py  voronoi_weighted_error.ipynb
MultiFidelityFunctions/: BC.py  BR.py  BT.py  HM.py  OD.py  SC.py  __init__.py  artificialMultifidelity.py  borehole.py  curretal88exp.py  multiFidelityFunction.py  park91a.py  park91b.py
multiLevelCoSurrogates/: BayesianOptimization.py  CandidateArchive.py  CandidateArchiveNew.py  Logger.py  Surrogates.py  Utils.py  __init__.py  __main__.py  acquisition.py  bifidbo.ipynb  bifidbo.py  bo.py  candidate_archive.py  candidate_archive_new.py  candidate_archive_old.py  config.py  fitness-dependent sampling.ipynb  instance.py  local.py  local.py.example  multiFidBO.py  optimizer.py  post_process.py  protoEG.py  requirements.txt  timing-analysis.ipynb  trifidbo.ipynb  trifidbo.py
notebooks/: 2d_lin_mse_tracking.npy  2d_mse_tracking.npy  Himmelblau_medium.ipynb  correlation-exploration.ipynb  distance_problem.ipynb  distance_problem_check.ipynb  fitness-dependent sampling.ipynb  forrester2007.ipynb  illustrated-bi-fid-doe.ipynb  lin-reg-fit.ipynb  lin_mse_tracking.npy  mf2_optimum_collection.ipynb  mse_tracking.npy  plot_landscapes.ipynb  plotting_best_vs_adjustable_param.ipynb  simple-mfbo-plotting.ipynb  speed_tests_six_hump_camelback.ipynb  subsample_reuse.ipynb  testing_ei_minimize.ipynb  (+2 more)
(+119 files in other folders)
