[metadata]
name = mlcs
version = 2.1
author = Sander van Rijn
author_email = s.j.van.rijn@liacs.leidenuniv.nl
description = work in progress package for multi-fidelity surrogates assisted optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sjvrijn/multi-level-co-surrogates
project_urls =
    Bug Tracker = https://github.com/sjvrijn/multi-level-co-surrogates/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .